-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
seems to be leaking allocated page if there was crypto init error:
__page = alloc_page(GFP_KERNEL);
if (__page == NULL)
return -ENOMEM;
req = cfs_crypto_hash_init(cfs_alg, NULL, 0);
if (IS_ERR(req)) {
CERROR("%s: unable to initialize checksum hash %s\n",
tgt_name(tgt), cfs_crypto_hash_name(cfs_alg));
return PTR_ERR(req);
}
- is related to
-
LU-15615 memory leak on use_t10_grd path in tgt_checksum_niobuf_t10pi
-
- Resolved
-